class march 30th update

--- a/staff/anibal-estrella/prework/web/app/index.html
+++ b/staff/anibal-estrella/prework/web/app/index.html
@@ -56,7 +56,7 @@
                    <form action="">
                     <div class="change-password">
                         <h3 class="change-password">Change avatar</h3>
-                        <input type="text"  name="avatarUrl" placeholder="Avatar image URL">
+                        <input type="text"  name="avatarUrl" placeholder="Avatar image URL" accept="image/png, image/jpeg, image/gif, image/png, image/webp">
                         <button type="submit">Update Avatar</button>
                         
                     </div>
@@ -75,8 +75,8 @@
                         <button type="submit">Change e-mail</button>
                    </div>
                    </form>
-                   <footer class="home-footer"><h1>Footer</h1></footer>
-               </div>
+                </div>
+                <footer class="home-footer"><h1>Footer</h1></footer>
         </div>
 
 
