--- a/staff/anibal-estrella/prework/web/arrays/index.html
+++ b/staff/anibal-estrella/prework/web/arrays/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARRAYS ISDI</title>
-</head>     
+    <title>Array</title>
+</head>
+
 <body>
-    <script type="module" src=""></script>
+    <!-- <script src="Array.prototype.push.demo.js"></script> -->
+    <script type="module" src="push.mjs"></script>
+    <script type="module" src="push.demo.mjs"></script>
+
+    <!-- <script src="Array.prototype.pop.demo.js"></script> -->
+    <script type="module" src="pop.mjs"></script>
+    <script type="module" src="pop.demo.mjs"></script>
+
+    <!-- <script src="Array.prototype.includes.js"></script> -->
+    <script type="module" src="includes.mjs"></script>
+    <script type="module" src="includes.demo.mjs"></script>
+
+    <!-- <script src="Array.prototype.forEach.demo.js"></script> -->
+    <script type="module" src="forEach.mjs"></script>
+    <script type="module" src="forEach.demo.mjs"></script>
+
+    <script src=""></script>
 </body>
+
 </html>
