--- a/staff/anibal-estrella/prework/web/app/index.html
+++ b/staff/anibal-estrella/prework/web/app/index.html
@@ -91,11 +91,8 @@
     <h1>Footer</h1>
   </footer>
 
-  <script src="./scripts/validators.js"></script>
-  <script src="./scripts/data.js"></script>
-  <script src="./scripts/logic.js"></script>
-  <script src="./scripts/ui.js"></script>
-  <script src="./scripts/main.js"></script>
+
+  <script type="module" src="./scripts/main.js"></script>
 </body>
 
 </html>
