class Apr 17, make curris

--- a/staff/anibal-estrella/prework/web/app/index.html
+++ b/staff/anibal-estrella/prework/web/app/index.html
@@ -2,12 +2,10 @@
 <html>
 	<head>
 		<title>ISDI APP</title>
-		<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/icons8-futurama-bender-color-16.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/icons8-futurama-bender-color-32.png">
-		<link rel="icon" type="image/png" sizes="48x48" href="./assets/favicon/icons8-futurama-bender-color-48.png">
-		<link rel="icon" type="image/png" sizes="180x180" href="./assets/favicon/icons8-futurama-bender-color-180.png">
-
-
+		<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/icons8-futurama-bender-color-16.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/icons8-futurama-bender-color-32.png" />
+		<link rel="icon" type="image/png" sizes="48x48" href="./assets/favicon/icons8-futurama-bender-color-48.png" />
+		<link rel="icon" type="image/png" sizes="180x180" href="./assets/favicon/icons8-futurama-bender-color-180.png" />
 
 		<link rel="stylesheet" href="style.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -18,7 +16,6 @@
 	<body>
 		<div class="login page off">
 			<section class="">
-
 				<form>
 					<h1>Login</h1>
 					<label for="username">E-mail:</label>
@@ -32,17 +29,19 @@
 		</div>
 
 		<div class="register page off">
-			<form action="" method="get" class="register-form">
-				<h1>Register</h1>
-				<label for="name">Name:</label>
-				<input type="text" class="name" name="name" placeholder="Enter your name" />
-				<label for="email">E-mail:</label>
-				<input type="text" class="email" name="email" placeholder="Enter your e-mail" />
-				<label for="password">Password:</label>
-				<input type="password" class="password" name="password" placeholder="Enter your password" />
-				<button class="buttom button-submit" type="submit" value="register">Register</button>
-			</form>
-			<p class="goto goto-login">Already registered? Login <a href="#">here</a>.</p>
+			<section class="">
+				<form action="" method="get" class="register-form">
+					<h1>Register</h1>
+					<label for="name">Name:</label>
+					<input type="text" class="name" name="name" placeholder="Enter your name" />
+					<label for="email">E-mail:</label>
+					<input type="text" class="email" name="email" placeholder="Enter your e-mail" />
+					<label for="password">Password:</label>
+					<input type="password" class="password" name="password" placeholder="Enter your password" />
+					<button class="buttom button-submit" type="submit" value="register">Register</button>
+				</form>
+				<p class="goto goto-login">Already registered? Login <a href="#">here</a>.</p>
+			</section>
 		</div>
 
 		<div class="home off">
@@ -68,23 +67,23 @@
 				</ul>
 			</div>
 
-			
-			<h2 class="hello-user">Hello. <span class="hello-user-name"></span>!</h2>
-			
-			<a href="#" class="home-profile-avatar-link">
-				<img class="user-avatar home-profile-avatar" src="" alt="" />
-			</a>
-			
+			<div class="hello-user">
+				<h2 class="hello-user-headline">Hello. <span class="hello-user-name"></span>!</h2>
+				<a href="#" class="home-profile-avatar-link">
+					<img class="user-avatar home-profile-avatar" src="" alt="" />
+				</a>
+			</div>
+
 			<div class="home-profile off">
-				<h1>Profile</h1>
 				<section class="change-user-avatar">
+					<h1>Profile</h1>
 					<form action="" class="change-user-avatar-form">
 						<h3 class="change-user-avatar-headline">Change avatar</h3>
 						<input type="url" name="url" placeholder="Avatar image URL" accept="image/png, image/jpeg, image/gif, image/png, image/webp" />
 						<button type="submit">Update Avatar</button>
 					</form>
 				</section>
-				
+
 				<section class="change-user-password">
 					<form action="" class="change-user-password-form">
 						<h3 class="change-password-headline">Change Your Password</h3>
@@ -93,18 +92,19 @@
 						<input type="password" name="newPasswordConfirm" placeholder="Confirm your new password" />
 						<button type="submit">Update Password</button>
 					</form>
-			</section>
+				</section>
 
-			<section class="change-user-email">
-				<form action="" class="change-user-email-form">
-					<h3 class="change-user-email-headline">Change Your e-mail</h3>
-					<input type="text" name="newEmail" placeholder="Enter your new e-mail" />
-					<input type="text" name="newEmailConfirm" placeholder="Confirm your new e-mail" />
-					<button type="submit">Change e-mail</button>
-				</form>
-			</section>
-		</div>
-		<!-- end of profile section -->
+				<section class="change-user-email">
+					<form action="" class="change-user-email-form">
+						<h3 class="change-user-email-headline">Change Your e-mail</h3>
+						<input type="text" name="newEmail" placeholder="Enter your new e-mail" />
+						<input type="text" name="newEmailConfirm" placeholder="Confirm your new e-mail" />
+						<button type="submit">Change e-mail</button>
+					</form>
+				</section>
+			</div>
+			<!-- end of profile section -->
+
 			<section class="add-post-panel off">
 				<form action="" class="add-post-panel-form">
 					<h3 class="create-post-headline">Shoot your post!</h3>
@@ -118,7 +118,8 @@
 				<div class="overlay-panel-close"></div>
 			</section>
 
-			<section class="post-list-panel off"></section>
+			<section class="post-list off"></section>
+
 			<footer class="home-footer">
 				<button class="add-post-button">+</button>
 			</footer>
