edit html markup and styles

--- a/staff/anibal-estrella/prework/web/app/index.html
+++ b/staff/anibal-estrella/prework/web/app/index.html
@@ -70,10 +70,12 @@
 			</header>
 
 			<div class="hello-user">
-				<h2 class="hello-user-headline">Hello. <span class="hello-user-name"></span>!</h2>
 				<a href="#" class="home-profile-avatar-link">
 					<img class="user-avatar home-profile-avatar" src="" alt="" />
 				</a>
+				<h2 class="hello-user-headline">Hi <span class="hello-user-name"></span>!
+				<br>What's up?
+				</h2>
 			</div>
 			
 			<div class="home-profile off">
