class Apr 18, closures, components

--- a/staff/anibal-estrella/prework/web/app.7/index.html
+++ b/staff/anibal-estrella/prework/web/app.7/index.html
@@ -80,7 +80,7 @@
 			
 			<div class="home-profile off">
 				<section>
-					<h2 class="profile-headline">Profile</h2>
+					<h2>Profile</h2>
 					<section class="change-user-avatar">
 						<h3 class="change-user-avatar-headline">Change your avatar</h3>
 						<form action="" class="change-user-avatar-form">
