fixed render home after Registered user

--- a/staff/anibal-estrella/prework/web/app.10/index.html
+++ b/staff/anibal-estrella/prework/web/app.10/index.html
@@ -33,11 +33,11 @@
 				<h2>Register</h2>
 				<form method="get" class="register-form">
 					<label for="name">Name:</label>
-					<input type="text" class="name" name="name" placeholder="Enter your name" value="Eddie"/>
+					<input type="text" class="name" name="name" placeholder="Enter your name" />
 					<label for="email">E-mail:</label>
-					<input type="text" class="email" name="email" placeholder="Enter your e-mail" value="pj@gmail.com"/>
+					<input type="text" class="email" name="email" placeholder="Enter your e-mail" />
 					<label for="password">Password:</label>
-					<input type="password" class="password" name="password" placeholder="Enter your password" value="123"/>
+					<input type="password" class="password" name="password" placeholder="Enter your password" />
 					<button class="buttom button-submit" type="submit" value="register">Register</button>
 				</form>
 				<p class="goto-login">
@@ -87,7 +87,7 @@
 						<section class="change-user-avatar panel">
 							<h3 class="change-user-avatar-headline">Change your avatar</h3>
 							<form action="" class="change-user-avatar-form">
-								<input type="url" name="url" placeholder="Avatar image URL" accept="image/*" />
+								<input type="url" name="url" placeholder="Avatar image URL" accept=".png, .jpeg,  .gif,  .png,  .webp" />
 								<button type="submit">Update Avatar</button>
 							</form>
 						</section>
