oldschool react iteration implementation

--- a/staff/anibal-estrella/prework/web/app.13/index.1.html
+++ b/staff/anibal-estrella/prework/web/app.13/index.1.html
@@ -14,22 +14,30 @@
 	</head>
 
 	<body>
-
-
-
-
-		
+		<div class="login center-container off">
+			<section class="panel">
+				<h2>Login</h2>
+				<form>
+					<label for="username">E-mail:</label>
+					<input type="text" class="email" name="email" placeholder="Enter your e-mail" value="pj@gmail.com" />
+					<label for="lastname">Password:</label>
+					<input type="password" class="password" name="password" placeholder="Enter your password" value="123" />
+					<button class="button-submit" type="submit">Login</button>
+				</form>
+				<p class="goto-register">Not registered? <br />Do it <a href="#">here</a>.</p>
+			</section>
+		</div>
 
 		<div class="register center-container off">
 			<section class="panel">
 				<h2>Register</h2>
 				<form method="get" class="register-form">
 					<label for="name">Name:</label>
-					<input type="text" class="name" name="name" placeholder="Enter your name" />
+					<input type="text" class="name" name="name" placeholder="Enter your name" value="Eddie"/>
 					<label for="email">E-mail:</label>
-					<input type="text" class="email" name="email" placeholder="Enter your e-mail" />
+					<input type="text" class="email" name="email" placeholder="Enter your e-mail" value="pj@gmail.com"/>
 					<label for="password">Password:</label>
-					<input type="password" class="password" name="password" placeholder="Enter your password" />
+					<input type="password" class="password" name="password" placeholder="Enter your password" value="123"/>
 					<button class="buttom button-submit" type="submit" value="register">Register</button>
 				</form>
 				<p class="goto-login">
@@ -79,7 +87,7 @@
 						<section class="change-user-avatar panel">
 							<h3 class="change-user-avatar-headline">Change your avatar</h3>
 							<form action="" class="change-user-avatar-form">
-								<input type="url" name="url" placeholder="Avatar image URL" accept=".png, .jpeg,  .gif,  .png,  .webp" />
+								<input type="url" name="url" placeholder="Avatar image URL" accept="image/*" />
 								<button type="submit">Update Avatar</button>
 							</form>
 						</section>
