oldschool react, implemented likes, timestamp but editpost and deletepost not refreshing posts in home

--- a/staff/anibal-estrella/prework/web/app/index.html
+++ b/staff/anibal-estrella/prework/web/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
@@ -10,7 +10,7 @@
 		<link rel="icon" type="image/png" sizes="48x48" href="./assets/favicon/icons8-futurama-bender-color-48.png" />
 		<link rel="icon" type="image/png" sizes="180x180" href="./assets/favicon/icons8-futurama-bender-color-180.png" />    
   </head>
-  <body>
+  <body >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
