--- a/staff/anibal-estrella/prework/web/app/index.html
+++ b/staff/anibal-estrella/prework/web/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>REACT ISDI APP</title>
 		<link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/icons8-futurama-bender-color-16.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/icons8-futurama-bender-color-32.png" />
